fix(ui): align icon and menu items properly
Closes #1105

--- a/src/content/styles/modules/_md-icon.scss
+++ b/src/content/styles/modules/_md-icon.scss
@@ -1,6 +1,6 @@
 @mixin md-icon {
     md-icon {
-        min-width: initial;
-        min-height: initial;
+        min-width: 0;
+        min-height: 0;
     }
 }
